  * debian/control:
     + bump Standards-Version to 3.7.3.
     + suggest lsb-release.
  * grep-excuses: permit requests to http://bjorn.haxx.se/debian/
    with --wipnity, -w option. Idea and implementation courtesy from
    Julian Mehnle <julian@mehnle.net>. (Closes: #448279)
  * bts: add a -n/--no-action option printing emails to stdout instead
    of sending them. (Closes: #458603)

  [ Adam D. Barratt ]
  * who-uploads: Actually check debian-keyring.pgp by default rather
    than .gpg twice. Thanks to Philipp Kern for pointing the issue out
    (Closes: #456209)
  * who-uploads: Check debian-maintainers.gpg by default. Thanks to
    Philipp Kern for the suggestion (Closes: #456208)
  * debian/control, README: Add debian-maintainers to the suggested
    package list
  * debchange: Add a configuration file option to allow overriding the
    default setting of -t / --mainttrailer (Closes: #454254, #453644)
  * debchange: Correctly handle using an empty changelog entry to switch
    the distribution to UNRELEASED when using the changelog heuristic
    (Closes: #453690)

  [ Luk Claes ]
  * chdist: Add bash_completion script for chdist (Closes: #457842)
  * chdist: Added improvements and fixed bugs. Thanks to Raphaël Pinson
    (Closes: #457841)

 -- Luk Claes <luk@debian.org>  Sat, 29 Dec 2007 15:47:13 +0100

devscripts (2.10.11) unstable; urgency=low

  [ Adam D. Barratt ]
  * uscan: Correctly parse HTMLised FTP directory listings. Thanks to
    Vaclav Ovsik for the patch (Closes: #448636)
  * desktop2menu: New script to generate skeleton menu files from
    freedesktop.org .desktop files. Thanks to Sune Vuorela (Closes: #448730)
  * debchange: Default to using -t / --mainttrailer when using the "changelog"
    heuristic. Thanks to Joey Hess for the patch (Closes: #448795)
  * debcommit: Automatically include the changelog in the list of files to be
    committed (Closes: #419657, again)
  * debcommit: Correctly pull the depot path from the output of svk info
