@@ -193,6 +193,11 @@ Increment the Debian release number for a non-maintainer upload by
 either appending a ".1" to a non-NMU version number or by incrementing
 an NMU version number, and add an NMU changelog comment.
 .TP
+.BR \-\-bin\-nmu
+Increment the Debian release number for a binary non-maintainer upload
+by ether appending a "+b1" to a non-binNMU version number or by
+incrementing a binNMU version number, and add a binNMU changelog comment.
+.TP
 .B \-\-qa
 Increment the Debian release number for a Debian QA Team upload, and
 add a QA upload changelog comment.
